Improved Layout and fixed bootstrap

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -15,7 +15,7 @@
     <h1 class="card-header">Instructions</h1>
         <div class="card-body">
             <div class="container">
-                <div class="row">
+                <div class="game-row">
                     <div class="col">
                         <p class="card-text">
                             To play a color hover over the field you want to set and the colors to click on will appear.
