--- a/app/views/orderandchaos.scala.html
+++ b/app/views/orderandchaos.scala.html
@@ -11,33 +11,47 @@
         <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/orderandchaos.css")' />
         <script src='@routes.Assets.versioned("javascripts/bootstrap.min.js")'> </script>
 
-        <div class="game">
-            <h1>Turn: @controller.turn</h1>
-            <div class="btn-group" >
-                <a href="/undo" class="btn btn-primary"> Undo </a>
-                <a href="/redo" class="btn btn-primary"> Redo </a>
-            </div>
-            @for(x <- size until 0 by -1) {
-                <div class="row">
-                @for(y <- size until 0 by -1) {
-                    @if(!grid(x - 1, y - 1).isSet) {
-                        <div class="cell empty-cell">
-                            <a href="/play/@x/@y/R" class="choice red-choice"></a>
-                            <a href="/play/@x/@y/B" class="choice blue-choice"></a>
-                        </div>
-                    } else {
-                        @if(grid(x - 1, y - 1).isRed) {
-                            <div class="cell red-cell"></div>
-                        } else {
-                            <div class="cell blue-cell"></div>
-                        }
-                    }
-                }
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="turn">Turn: @controller.turn</h1>
                 </div>
-            }
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="game">
+                    @for(x <- size until 0 by -1) {
+                        <div class="game-row">
+                        @for(y <- size until 0 by -1) {
+                            @if(!grid(x - 1, y - 1).isSet) {
+                                <div class="game-cell empty-cell">
+                                    <a href="/play/@x/@y/R" class="choice red-choice"></a>
+                                    <a href="/play/@x/@y/B" class="choice blue-choice"></a>
+                                </div>
+                            } else {
+                                @if(grid(x - 1, y - 1).isRed) {
+                                    <div class="game-cell red-cell"></div>
+                                } else {
+                                    <div class="game-cell blue-cell"></div>
+                                }
+                            }
+                        }
+                        </div>
+                    }
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="side-buttons">
+                        <a href="/undo" class="btn btn-primary side-button"> Undo </a>
+                        <a href="/redo" class="btn btn-primary side-button"> Redo </a>
+                    </div>
+                </div>
+            </div>
             @if(!(error equals "")) {
-                <div class="alert alert-primary" role="alert">
-                @error
+                <div class="row">
+                    <div class="alert alert-danger error-message">
+                    @error
+                    </div>
                 </div>
             }
         </div>
