--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,21 +10,23 @@
 <html lang="en">
     <head>
         @* Here's where we render the page title `String`. *@
-    <title>@title</title>
-    <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
-    <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" ></script>
+        <title>@title</title>
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
+        <script src="@routes.Assets.versioned("javascripts/popper.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/jquery-3.2.1.min.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.js")" ></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Order and Chaos</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img src="@routes.Assets.versioned("images/navicon.png")" width="30" height="30"  alt="open"/>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/reset">New</a>
