--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,6 +15,7 @@
         <script src="@routes.Assets.versioned("javascripts/popper.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/jquery-3.2.1.min.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.js")" ></script>
+        <script src="@routes.Assets.versioned("javascripts/orderandchaos.js")"></script>>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
