--- a/app/views/orderandchaos.scala.html
+++ b/app/views/orderandchaos.scala.html
@@ -19,21 +19,10 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="game">
-                    @for(x <- size until 0 by -1) {
+                    @for(row <- size until 0 by -1) {
                         <div class="game-row">
-                        @for(y <- size until 0 by -1) {
-                            @if(!grid(x - 1, y - 1).isSet) {
-                                <div class="game-cell empty-cell">
-                                    <a href="/play/@x/@y/R" class="choice red-choice"></a>
-                                    <a href="/play/@x/@y/B" class="choice blue-choice"></a>
-                                </div>
-                            } else {
-                                @if(grid(x - 1, y - 1).isRed) {
-                                    <div class="game-cell red-cell"></div>
-                                } else {
-                                    <div class="game-cell blue-cell"></div>
-                                }
-                            }
+                        @for(col <- size until 0 by -1) {
+                            <div class="game-cell" id="game-cell@row@col"></div>
                         }
                         </div>
                     }
