--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,11 +15,11 @@
         <script src="@routes.Assets.versioned("javascripts/popper.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/jquery-3.2.1.min.js")" ></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.js")" ></script>
-        <script src="@routes.Assets.versioned("javascripts/orderandchaos.js")"></script>>
+        <script src="@routes.Assets.versioned("javascripts/orderandchaos.js")"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Order and Chaos</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <a class="navbar-brand text-light" href="#">Order and Chaos</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="@routes.Assets.versioned("images/navicon.png")" width="30" height="30"  alt="open"/>
             </button>
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                        <a class="nav-link text-light" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/reset">New</a>
+                        <a class="nav-link text-light" href="/reset">New</a>
                     </li>
                 </ul>
             </div>
