updated authentication, but can not play after sign in because vue do not work

--- a/app/views/orderandchaos.scala.html
+++ b/app/views/orderandchaos.scala.html
@@ -13,7 +13,7 @@
     }
 
     @main("Order and Chaos",Some(user)) {
-        <script src="@assets.path("javascripts/vue.js")"></script>
+        <script src="@assets.path("javascripts/vue.min.js")"></script>
         <script src="@assets.path("javascripts/oacvue.js")"></script>
 
         <link rel="stylesheet" href='@assets.path("stylesheets/orderandchaos.css")' />
