--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -3,9 +3,9 @@
 @import org.webjars.play.WebJarsUtil
 @import controllers.AssetsFinder
 
-@()(implicit request: RequestHeader, messages: Messages, webJarsUtil: WebJarsUtil, assets: AssetsFinder)
+@(user: models.User)(implicit request: RequestHeader, messages: Messages, webJarsUtil: WebJarsUtil, assets: AssetsFinder)
 
-@main(messages("home.title"), None) {
+@main(messages("home.title"), Some(user)) {
 
 
     <div class="container">
