--- a/app/views/orderandchaos.scala.html
+++ b/app/views/orderandchaos.scala.html
@@ -13,27 +13,42 @@
     }
 
     @main("Order and Chaos",Some(user)) {
-        <script src="@assets.path("javascripts/vue.min.js")"></script>
-        <script src="@assets.path("javascripts/oacvue.js")"></script>
-
+<!--        <script src="@assets.path("javascripts/vue.js")"></script>-->
+<!--        <script src="@assets.path("javascripts/oacvue.js")"></script>-->
+        <script src="@assets.path("javascripts/oac.js")"></script>
         <link rel="stylesheet" href='@assets.path("stylesheets/orderandchaos.css")' />
 
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1 class="turn text-light" id="top-text">Turn: @controller.turn</h1>
-                </div>
-            </div>
-            <div id="game" class="row">
-                <my-game-field></my-game-field>
-                <my-buttons></my-buttons>
-            </div>
-            @if(!(error equals "")) {
-                <div class="row">
-                    <div class="alert alert-danger error-message">
-                    @error
-                    </div>
-                </div>
-            }
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="turn text-light" id="top-text">Turn: @controller.turn</h1>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <div class="game">
+                @for(row <- size - 1 to 0 by -1) {
+                <div class="game-row">
+                    @for(col <- 0 until size) {
+                    <div class="game-cell" id="game-cell@col@row"></div>
+                    }
+                </div>
+                }
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="side-buttons">
+                <div class="btn btn-primary side-button" id="undo-button"> Undo </div>
+                <div class="btn btn-primary side-button" id="redo-button"> Redo </div>
+            </div>
+        </div>
+    </div>
+    @if(!(error equals "")) {
+    <div class="row">
+        <div class="alert alert-danger error-message">
+            @error
+        </div>
+    </div>
+    }
+</div>
     }
