--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -25,7 +25,7 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
             <![endif]-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script src="@assets.path("javascripts/oacvue.js")" ></script>
+        <script src="@assets.path("javascripts/jquery-3.2.1.min.js")" ></script>
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
